fix spacing

--- a/src/components/miniProfile.module.css
+++ b/src/components/miniProfile.module.css
@@ -86,6 +86,12 @@
   }
 }
 
+.activities {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .banner {
   position: relative;
   width: 100%;
